--- a/HW23-WEB/src/main/resources/templates/clients.html
+++ b/HW23-WEB/src/main/resources/templates/clients.html
@@ -20,24 +20,13 @@
 <button onclick="getUserById()">Получить</button>
 <pre id = "userDataContainer"></pre>
 
-<h4>Случайный пользователь</h4>
-<table style="width: 400px">
-    <thead>
-        <tr>
-            <td style="width: 50px">Id</td>
-            <td style="width: 150px">Имя</td>
-            <td style="width: 100px">Логин</td>
-            <td style="width: 100px">Пароль</td>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>${randomUser.id}</td>
-            <td>${randomUser.name}</td>
-            <td>${randomUser.login}</td>
-            <td>${randomUser.password}</td>
-        </tr>
-    </tbody>
-</table>
+<h4>Все клиенты</h4>
+
+<#list clients as client>
+<div>
+    ${client}<#sep>, </#sep>
+</div>
+</#list>
+
 </body>
 </html>
