--- a/HW23-WEB/src/main/resources/templates/login.html
+++ b/HW23-WEB/src/main/resources/templates/login.html
@@ -8,16 +8,16 @@
     <br/>
     <form action="login" method="post">
         <label>
-            login <br/>
-            <input type="text" name="login" value="user7">
+            login<br/>
+            <input type="text" name="login" value="login">
         </label>
         <br/>
         <label>
             password<br/>
-            <input type="password" name="password" value="11111">
+            <input type="password" name="password" value="password">
         </label>
         <br/><br/>
-        <input type="submit" value="Перейти к списку пользователей">
+        <input type="submit" value="Перейти к списку клиентов">
     </form>
 </div>
 </body>
