--- a/HW23-WEB/src/main/resources/templates/clients.html
+++ b/HW23-WEB/src/main/resources/templates/clients.html
@@ -1,11 +1,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Пользователи</title>
+    <title>Клиенты</title>
     <script>
-        function getUserById() {
-            const userIdTextBox = document.getElementById('userIdTextBox');
+        function addClient() {
+            const userNameTextBox = document.getElementById('userNameTextBox');
+            const userStreetTextBox = document.getElementById('userStreetTextBox');
             const userDataContainer = document.getElementById('userDataContainer');
-            const id = userIdTextBox.value;
+            const name = userNameTextBox.value;
+            const street = userStreetTextBox.value;
             //fetch('api/user?id=' + id)
             fetch('api/user/' + id)
                 .then(response => response.json())
@@ -15,10 +17,18 @@
 </head>
 
 <body>
-<h4>Получить пользователя по id</h4>
-<input type="text" id = "userIdTextBox" value="3" placeholder="Введите id пользователя">
-<button onclick="getUserById()">Получить</button>
-<pre id = "userDataContainer"></pre>
+<h4>Добавить клиента</h4>
+
+<form action="/users" method="post">
+    <div>имя:</div>
+    <input type="text" name="name" placeholder="Введите имя пользователя"/>
+    <br/><br/>
+    <div>улица:</div>
+    <input type="text" name="street" placeholder="Введите улицу пользователя"/>
+    <br/><br/>
+    <input type="submit" value="Добавить"/>
+    <input type="reset" value="Reset"/>
+</form>
 
 <h4>Все клиенты</h4>
 
