--- a/HW28-Spring-web/src/main/resources/templates/login.html
+++ b/HW28-Spring-web/src/main/resources/templates/login.html
@@ -1,4 +1,4 @@
-﻿<html xmlns="http://www.w3.org/1999/xhtml" content="text/html;">
+﻿<html content="text/html;" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Login</title>
 </head>
@@ -9,12 +9,12 @@
     <form action="login" method="post">
         <label>
             login<br/>
-            <input type="text" name="login" value="login">
+            <input name="login" type="text" value="login">
         </label>
         <br/>
         <label>
             password<br/>
-            <input type="password" name="password" value="password">
+            <input name="password" type="password" value="password">
         </label>
         <br/><br/>
         <input type="submit" value="Перейти к списку клиентов">
