--- a/HW28-Spring-web/src/main/resources/templates/clients.html
+++ b/HW28-Spring-web/src/main/resources/templates/clients.html
@@ -19,7 +19,7 @@
 <body>
 <h4>Добавить клиента</h4>
 
-<form action="/users" method="post">
+<form action="/addclient" method="post">
     <div>имя:</div>
     <input name="name" placeholder="Введите имя пользователя" type="text"/>
     <br/><br/>
