--- a/HW28-Spring-web/src/main/resources/templates/clients.html
+++ b/HW28-Spring-web/src/main/resources/templates/clients.html
@@ -1,19 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Клиенты</title>
-    <script>
-        function addClient() {
-            const userNameTextBox = document.getElementById('userNameTextBox');
-            const userStreetTextBox = document.getElementById('userStreetTextBox');
-            const userDataContainer = document.getElementById('userDataContainer');
-            const name = userNameTextBox.value;
-            const street = userStreetTextBox.value;
-            //fetch('api/user?id=' + id)
-            fetch('api/user/' + id)
-                .then(response => response.json())
-                .then(user => userDataContainer.innerHTML = JSON.stringify(user));
-        }
-    </script>
 </head>
 
 <body>
@@ -30,30 +17,16 @@
     <input type="reset" value="Reset"/>
 </form>
 
-<h4>Все клиенты</h4>
-
-<!--<form action="#" th:action="@{/adduser}" th:object="${user}" method="post">-->
-<!--    <label for="name">Name</label>-->
-<!--    <input type="text" th:field="*{name}" id="name" placeholder="Name">-->
-<!--    <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>-->
-<!--    <label for="email">Email</label>-->
-<!--    <input type="text" th:field="*{email}" id="email" placeholder="Email">-->
-<!--    <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>-->
-<!--    <input type="submit" value="Add User">-->
-<!--</form>-->
-
+<h3>Все клиенты</h3>
 
 <div th:switch="${clients}">
     <h2 th:case="null">No users yet!</h2>
     <div th:case="*">
-        <h2>Users</h2>
         <table>
             <thead>
             <tr>
                 <th>Name</th>
-                <th>Email</th>
-                <th>Edit</th>
-                <th>Delete</th>
+                <th>Address</th>
             </tr>
             </thead>
             <tbody>
@@ -61,23 +34,10 @@
                 <td th:text="${client.name}"></td>
                 <td th:text="${client.addresses}"></td>
                 <td th:text="${client.phones}"></td>
-                <td><a th:href="@{/edit/{id}(id=${client.id})}">Edit</a></td>
-                <td><a th:href="@{/delete/{id}(id=${client.id})}">Delete</a></td>
             </tr>
             </tbody>
         </table>
     </div>
-    <p><a href="/signup">Add a new user</a></p>
 </div>
-
-<#list clients as client>
-<div>
-    ${client}<#sep>,
-</
-#sep>
-</div>
-</
-#list>
-
 </body>
 </html>
